Fix spacing for quote/image

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -54,7 +54,7 @@ img {
 
 .cell {
   color: white;
-  margin: 0 auto;
+  margin: -60px auto 0;
   max-width: 550px;
   padding: 20px;
 }
